# Advanced-blender-mcp-bridge

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  ruff.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  extension-ci.yml
blender_addon/: __init__.py  blender_manifest.toml  preferences.py
blender_addon/capabilities/: __init__.py  _dryrun.py  _helpers.py  animation.py  asset_import.py  assets.py  checkpoint.py  collections.py  composer.py  constraints.py  datablocks.py  diff.py  exec_python.py  geonodes.py  geonodes_presets.py  light_camera.py  material.py  mesh.py  mesh_edit.py  mode.py  modifier.py  nodes.py  object_ops.py  operator.py  properties.py  query.py  rename.py  render.py  scene.py  scene_context.py  selection.py  shader_graph.py  shape_keys.py  snapshot.py  spatial.py  vertex_groups.py
blender_addon/presets/geonodes/: array-along-curve.json  displace-noise.json  scatter-on-surface.json
blender_addon/safety/: audit_log.py  checkpoint.py  checkpoints.py  validator.py
blender_addon/server/: dispatcher.py  main_thread.py  notify.py  progress.py  ws_server.py
blender_addon/ui/: panel.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DISTRIBUTION_PLAN.md  PLAN.md  REMEDIATION_PLAN.md  REMEDIATION_RESULTS.md  REMOTE.md  SECURITY.md
examples/: claude_desktop_config.json  cline_mcp.json  vscode_mcp.json
examples/policies/: dev.json  strict.json
examples/prompts/: build_red_chair.md
mcp_server/: README.md  pyproject.toml
mcp_server/blender_mcp/: api_cache.py  approval.py  blender_client.py  installer.py  perf.py  policy.py  rate_limit.py  server.py  snapshot_cache.py  tool_meta.py
mcp_server/tests/: conftest.py  test_animation.py  test_api_cache.py  test_approval_flow.py  test_checkpoints.py  test_dry_run.py  test_error_paths.py  test_exec_python.py  test_geonodes.py  test_geonodes_presets.py  test_installer.py  test_light_camera.py  test_material.py  test_mesh_edit.py  test_modifier.py  test_notifications.py  test_path_jail_contract.py  test_perf.py  test_ping.py  test_policy.py  test_poly_estimate.py  test_rate_limit.py  test_reauth_recovery.py  test_render_transport.py  test_resources.py  test_review_fixes.py  test_scene.py  test_scene_edit.py  test_shader_graph.py  test_snapshot_cache.py  test_tool_meta.py  test_transaction.py  test_v2_extras.py  test_v2_tools.py  test_v3_tier1.py  test_validator.py  test_validator_v2.py
mcp_server/tests/perf/: test_hotpath_bench.py
scripts/: acceptance_v2.py  build_hex_sphere.py  hex_align.json  hex_probe.json  hex_sphere_variants.py  measure_baseline.ps1  package_addon.ps1  smoke_mcp_handshake.py  smoke_ping.py  smoke_v2.py  snap_hex_sphere.py  snap_hex_sphere_clean.py  vendor_wheels.ps1  verify_hex_sphere.py
scripts/baselines/: v2.0.0.json
shared/schemas/: animation.schema.json  asset_import.schema.json  command.schema.json  exec_python.schema.json  exec_python_error.schema.json  geonodes.schema.json  light_camera.schema.json  material.schema.json  mesh_edit.schema.json  modifier.schema.json  render_progress.schema.json  response.schema.json  scene.schema.json  selection.schema.json  shader_graph.schema.json  transaction.schema.json  transform.schema.json
tests/integration/: README.md  conftest.py  run_in_blender.py  test_create_objects_real.py  test_dry_run.py  test_geonodes_scatter.py  test_round_trip_query.py  test_snapshot_diff.py
vscode_extension/: .mocharc.json  .vscodeignore  CHANGELOG.md  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
vscode_extension/media/walkthrough/: detect-python.md  install-addon.md  start-blender.md  verify.md  welcome.md
vscode_extension/resources/: snippets.json
vscode_extension/scripts/: copy-addon.js
vscode_extension/src/: approval.ts  auditPeek.ts  bootstrap.ts  connectionConfig.ts  extension.ts  log.ts  mcpProvider.ts  secretToken.ts  snippets.ts  statusUi.ts  telemetry.ts  viewportPreview.ts  wsClient.ts
vscode_extension/test/: approval.test.ts  auditPeek.test.ts  bootstrap.test.ts  extension.test.ts  log.test.ts  mcpProvider.test.ts  secretToken.test.ts  setup.js  snippets.test.ts  statusUi.test.ts  telemetry.test.ts  unit.test.ts  viewportPreview.test.ts  wsClient.test.ts
