[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp"
version = "2.0.0"
description = "MCP server bridging AI assistants to Blender"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "BlenderVscode contributors" },
]
keywords = ["blender", "mcp", "model-context-protocol", "ai", "3d"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.2",
    "pydantic>=2",
    "websockets==12.0",
    "keyring",
    "python-ulid",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "jsonschema",
]

[project.urls]
Homepage = "https://github.com/user/BlenderVscode"
Repository = "https://github.com/user/BlenderVscode"
Documentation = "https://github.com/user/BlenderVscode/tree/main/docs"
Issues = "https://github.com/user/BlenderVscode/issues"

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[tool.hatch.build.targets.sdist]
packages = ["blender_mcp"]

[tool.hatch.build.targets.wheel]
packages = ["blender_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
